@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Fixed: some ViaFree videos that were just live did not play (Fixes #1050)
+* Fixed: Some ViaFree streams did not play (Fixes #1107)
 
 [I]Previous changes[/I]
+* Fixed: some ViaFree videos that were just live did not play (Fixes #1050)
 * Fixed: ViaFree based channels without a season/episode number broken (Fixes #996)
 * Fixed: subtitle issue with some Swedish channels (Fixes #993)
 * Fixed: ViaSat channels split into Viasat.se/.no and non-api channels
